--- a/personal-website/src/components/Skills/Skills.module.css
+++ b/personal-website/src/components/Skills/Skills.module.css
@@ -1,23 +1,18 @@
 .skill {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    padding: 1rem;
+    margin: 0rem calc(1vw + 1rem);
 
-    height: 90vh;
-    padding-top: 1rem;
-}
-
-.adjust {
-    margin: auto;
+    /* Prevent contents from going up */
+    min-height: 90vh;
 }
 
 .grid {
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    
     grid-gap:calc(1vw + 3rem);
-    padding: calc(1vw + 1rem);
-    
     text-align: center;
 }
 
@@ -58,6 +53,9 @@
 }
 
 @media screen and (max-width: 950px){
+    .skill{
+        align-items: center;
+    }
     .grid, .list{
         grid-template-columns: repeat(1, 1fr);
     }
